--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -49,6 +49,17 @@
   url = {https://CRAN.R-project.org/package=R6}
 }
 
+@article{Dempster:1977,
+  title={Maximum likelihood from incomplete data via the EM algorithm},
+  author={Dempster, Arthur P and Laird, Nan M and Rubin, Donald B},
+  journal={Journal of the royal statistical society: series B (methodological)},
+  volume={39},
+  number={1},
+  pages={1--22},
+  year={1977},
+  publisher={Wiley Online Library}
+}
+
 @article{Haaijer:1998,
 	author = {Rinus Haaijer and Michel Wedel and Marco Vriens and Tom Wansbeek},
 	journal = {Marketing Science},
